# Vize

./: .gitignore  docker-compose.yml
contract/: message.proto
nginx/: vchan.conf
vchan-api/: Dockerfile  pom.xml
vchan-api/src/main/resources/: application.yml
vchan-api/src/main/resources/sql/: 01_schema.sql  02_functions.sql  03_data.sql
vchan-ui/: .gitignore  Dockerfile  nuxt.config.ts  package.json
vchan-ui/app/components/: BoardList.vue  NotificationAnchor.vue  PostItem.vue  ReplyWindow.vue  SubButton.vue  ThreadCard.vue
vchan-ui/app/composables/: useBoardContext.ts  useSocket.ts  useThreadContext.ts
vchan-ui/app/layouts/: default.vue
vchan-ui/app/middleware/: validate-board.ts
vchan-ui/app/pages/: index.vue
vchan-ui/app/pages/[board]/: index.vue
vchan-ui/app/plugins/: dompurify-html.ts  init.client.ts  init.server.ts
vchan-ui/app/stores/: boards.ts  notifications.ts  threads.ts
vchan-ui/app/types/: boards.ts  data.ts  socket.ts
vchan-worker/: Cargo.toml  Dockerfile  build.rs
vchan-worker/src/: main.rs
vchan-worker/src/entities/: board.rs  message.rs  room_key.rs
vize-be/: pom.xml
vize-be/src/main/resources/: application.yml
vize-ui/: nuxt.config.ts  package.json
vize-ui/app/components/: BoardList.vue  PostItem.vue  ReplyWindow.vue  SubButton.vue
vize-ui/app/composables/: useSocket.ts  useThreadContext.ts
vize-ui/app/layouts/: default.vue
vize-ui/app/pages/: [board].vue  index.vue
vize-ui/app/stores/: boards.ts  threads.ts
vize-ui/app/types/: data.ts
vize-worker/: Cargo.toml
vize-worker/src/: main.rs
(+28 files in other folders)
