[package]
name = "vchan-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
tokio = { version = "1.0", features = ["full"] }
dashmap = "6.0"
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = "1.23.1"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
